feat: Allow to change Space permission through Admin UI - MEED-7737 - Meeds-io/MIPs#160 (#4170)
This change will introduce a new API for managing and administrating
Spaces.